--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
+    "typescript-eslint": "^8.45.0"
   }
 }
